# letmenotifyu-rs

./: Cargo.toml  LICENSE  README.md  movies.json
src/: background.rs  database.rs  glade.rs  main.rs  movie.rs  yify.rs
src/ui/: Main.glade  Main.glade~  Preferences.glade  Preferences.glade~  movie_detail.rs  preference.rs
