[package]
name = "letmenotifyu"
version = "0.1.0"
authors = ["ebsuku <stumenz.complex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.24.2"
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
reqwest = {version = "0.11.0", features=['blocking', 'json']}
bytes = "1.0"
gtk = "0.9.2"
glib = "0.10.3"